--- a/www/krisair_f1collectibles_detail.html
+++ b/www/krisair_f1collectibles_detail.html
@@ -1,7 +1,7 @@
 <div data-page="krisair_f1collectibles_detail" class="page">
     <div class="navbar">
         <div class="navbar-inner">
-            <div class="left"><a href="index.html" class="back link icon-only"><i class="icon icon-back"></i></a></div>
+            <div class="left"><a href="#" class="back link icon-only"><i class="icon icon-back"></i></a></div>
             <div class="center">F1 Collectibles</div>
             <div class="right"><a href="#" data-panel="right" class="link icon-only open-panel"><i class="icon fa fa-shopping-cart"></i> &nbsp; View Cart</a></div>
         </div>
@@ -48,7 +48,7 @@
                         <div class="item-inner">
                             <div class="item-title-row">
                                 <div class="item-title">2015 F1 Racing Car Earpiece</div>
-                                <div class="item-after">#32</div>
+                                <div class="item-after">$32</div>
                             </div>
                             <div class="item-subtitle">Electronics</div>
                             <div class="item-text">Packed in a handy hard-case zipper pouch, this pair of lightweight racing car earphones will make a perfect gift for racing fanatics.</div>
