--- a/www/index.html
+++ b/www/index.html
@@ -78,9 +78,9 @@
                                             </div></a></li>
                                     <li><a id="scanQRCode" href="promo.html" class="item-link close-panel"> 
                                             <div class="item-content">
-                                                <div class="item-media"><i class="icon icon-f7"></i></div>
+                                                <div class="item-media"><i class="fa fa-qrcode fa-2x color-gray"></i></div>
                                                 <div class="item-inner"> 
-                                                    <div class="item-title">Promo</div>
+                                                    <div class="item-title">Scan QR Code</div>
                                                 </div>
                                             </div>
                                         </a>
