--- a/www/krisair_beauty_detail.html
+++ b/www/krisair_beauty_detail.html
@@ -13,11 +13,11 @@
     </form>
     <div class="searchbar-overlay"></div>
     <div class="page-content">
-       
+
         <div class="list-block media-list search-here searchbar-found">
             <ul>                
                 <li class="swipeout">
-                    <a href="#" data-panel="right" class="item-link item-content swipeout-content">
+                    <a href="krisair_generic_item_detail.html" data-panel="right" class="item-link item-content swipeout-content">
                         <div class="item-media">
                             <img src="img/krisair/beauty/ageessence.jpg" width="80"/></div>
                         <div class="item-inner">
@@ -29,9 +29,10 @@
                             <div class="item-text">Filled with the vitality of nature, the natural fermented ingredients of more than 80 organic plants help to restore healthy skin.</div>
                         </div>
                     </a>
-                    <div class="swipeout-actions-right"><a href="#" class="swipeout-content inflight-order-prompt">Add to Cart</a></div>
+                    <div class="swipeout-actions-right"><a href="#" class="swipeout-content inflight-order-prompt bg-orange">Add to Cart</a></div>
                 </li>                
-                <li><a href="#" data-panel="right" class="item-link item-content inflight-order-prompt open-panel">
+                <li class="swipeout">
+                    <a href="krisair_generic_item_detail.html" data-panel="right" class="item-link item-content swipeout-content">
                         <div class="item-media">
                             <img src="img/krisair/beauty/blush.jpg" width="80"/></div>
                         <div class="item-inner">
@@ -43,8 +44,10 @@
                             <div class="item-text">Banish fine lines and overall ageing with Derma-Rx Rejuvenator! Now available outside DRx Clinic for the first time, the Rejuvenator is formulated with the finest anti-ageing ingredients and peptides to stimulate collagen.</div>
                         </div>
                     </a>
+                    <div class="swipeout-actions-right"><a href="#" class="swipeout-content inflight-order-prompt bg-orange">Add to Cart</a></div>
                 </li>
-                <li><a href="#" data-panel="right" class="item-link item-content inflight-order-prompt open-panel">
+                <li class="swipeout">
+                    <a href="krisair_generic_item_detail.html" data-panel="right" class="item-link item-content swipeout-content">
                         <div class="item-media">
                             <img src="img/krisair/beauty/bubblemask.jpg" width="80"/></div>
                         <div class="item-inner">
@@ -56,8 +59,10 @@
                             <div class="item-text">Firming, smoothing and refreshing, Veld’s first anti-wrinkle eye-contour care in a brush treats the upper eyelids and wrinkles between the eyebrows, as well as crow’s feet, fine wrinkles and sagging eyelids.</div>
                         </div>
                     </a>
+                    <div class="swipeout-actions-right"><a href="#" class="swipeout-content inflight-order-prompt bg-orange">Add to Cart</a></div>
                 </li>
-                <li><a href="#" data-panel="right" class="item-link item-content inflight-order-prompt open-panel">
+                <li class="swipeout">
+                    <a href="krisair_generic_item_detail.html" data-panel="right" class="item-link item-content swipeout-content">
                         <div class="item-media">
                             <img src="img/krisair/beauty/essence.jpg" width="80"/></div>
                         <div class="item-inner">
@@ -69,8 +74,10 @@
                             <div class="item-text">Firming, smoothing and refreshing, Veld’s first anti-wrinkle eye-contour care in a brush treats the upper eyelids and wrinkles between the eyebrows, as well as crow’s feet, fine wrinkles and sagging eyelids. Applied in an “∞” pattern, it also provides a drainage massage effect to the eye area. 15ml.</div>
                         </div>
                     </a>
+                    <div class="swipeout-actions-right"><a href="#" class="swipeout-content inflight-order-prompt bg-orange">Add to Cart</a></div>
                 </li>     
-                <li><a href="#" data-panel="right" class="item-link item-content inflight-order-prompt open-panel">
+                <li class="swipeout">
+                    <a href="krisair_generic_item_detail.html" data-panel="right" class="item-link item-content swipeout-content">
                         <div class="item-media">
                             <img src="img/krisair/beauty/facebase.jpg" width="80"/></div>
                         <div class="item-inner">
@@ -82,8 +89,10 @@
                             <div class="item-text">Derma-Rx Illuminator brings radiance and luminosity into your life! A multi-action illuminating serum that features a multi-action brightening strategy. No longer simply fighting melanin to brighten skin, the Illuminator works to also eliminate other factors that contribute to a dull and uneven complexion. 30ml.</div>
                         </div>
                     </a>
+                    <div class="swipeout-actions-right"><a href="#" class="swipeout-content inflight-order-prompt bg-orange">Add to Cart</a></div>
                 </li> 
-                <li><a href="#" data-panel="right" class="item-link item-content inflight-order-prompt open-panel">
+                <li class="swipeout">
+                    <a href="krisair_generic_item_detail.html" data-panel="right" class="item-link item-content swipeout-content">
                         <div class="item-media">
                             <img src="img/krisair/beauty/liptrio.jpg" width="80"/></div>
                         <div class="item-inner">
@@ -95,6 +104,7 @@
                             <div class="item-text">This revolutionary product uses multi-layer phospholipid microcapsules that slowly dissolve and release their beauty-enhancing contents, helping to maintain beautiful skin. 60ml.</div>
                         </div>
                     </a>
+                    <div class="swipeout-actions-right"><a href="#" class="swipeout-content inflight-order-prompt bg-orange">Add to Cart</a></div>
                 </li> 
             </ul>
         </div>
