--- a/www/krisair_f1collectibles_detail.html
+++ b/www/krisair_f1collectibles_detail.html
@@ -1,4 +1,4 @@
-<div data-page="krisair_f1collectibles_detail" class="page">
+<div data-page="krisair-category-listing" class="page">
     <div class="navbar">
         <div class="navbar-inner">
             <div class="left"><a href="#" class="back link icon-only"><i class="icon icon-back"></i></a></div>
@@ -13,10 +13,11 @@
     </form>
     <div class="searchbar-overlay"></div>
     <div class="page-content">
-       
+
         <div class="list-block media-list search-here searchbar-found">
             <ul>                
-                <li><a href="#" data-panel="right" class="item-link item-content inflight-order-prompt open-panel">
+                <li class="swipeout">      
+                    <a href="krisair_generic_item_detail.html" data-panel="right" class="item-link item-content swipeout-content">
                         <div class="item-media">
                             <img src="img/krisair/f1collectibles/bear.jpg" width="80"/></div>
                         <div class="item-inner">
@@ -28,8 +29,10 @@
                             <div class="item-text">Our 2015 F1 edition Beary Ambassador decked out in a sporty visor and SIA pit crew overalls. </div>
                         </div>
                     </a>
+                    <div class="swipeout-actions-right"><a href="#" class="swipeout-content inflight-order-prompt bg-orange">Add to Cart</a></div>
                 </li>                
-                <li><a href="#" data-panel="right" class="item-link item-content inflight-order-prompt open-panel">
+                <li class="swipeout">    
+                    <a href="krisair_generic_item_detail.html" data-panel="right" class="item-link item-content swipeout-content">
                         <div class="item-media">
                             <img src="img/krisair/f1collectibles/bottle.jpg" width="80"/></div>
                         <div class="item-inner">
@@ -41,8 +44,10 @@
                             <div class="item-text">Look and stay cool with the handy foldable water bottle. Set comes with one blue and one yellow bottle. Made from PET/PA/PE - BPA Free material.</div>
                         </div>
                     </a>
+                    <div class="swipeout-actions-right"><a href="#" class="swipeout-content inflight-order-prompt bg-orange">Add to Cart</a></div>
                 </li>
-                <li><a href="krisair_f1collectibles_earpiece.html" data-panel="right" class="item-link item-content">
+                <li class="swipeout">
+                    <a href="krisair_f1collectibles_earpiece.html" data-panel="right" class="item-link item-content swipeout-content">
                         <div class="item-media">
                             <img src="img/krisair/f1collectibles/earpiece.jpg" width="80"/></div>
                         <div class="item-inner">
@@ -54,8 +59,10 @@
                             <div class="item-text">Packed in a handy hard-case zipper pouch, this pair of lightweight racing car earphones will make a perfect gift for racing fanatics.</div>
                         </div>
                     </a>
+                    <div class="swipeout-actions-right"><a href="#" class="swipeout-content inflight-order-prompt bg-orange">Add to Cart</a></div>
                 </li>
-                <li><a href="krisair_f1collectibles_pen.html" data-panel="right" class="item-link item-content">
+                <li class="swipeout">
+                    <a href="krisair_f1collectibles_pen.html" data-panel="right" class="item-link item-content swipeout-content">
                         <div class="item-media">
                             <img src="img/krisair/f1collectibles/pen.jpg" width="80"/></div>
                         <div class="item-inner">
@@ -67,8 +74,10 @@
                             <div class="item-text">Fitted with the Singapore Airlines aircraft-shaped clip, this gift set of five ballpoint pens provides comfortable writing with a black rubber grip. </div>
                         </div>
                     </a>
+                    <div class="swipeout-actions-right"><a href="#" class="swipeout-content inflight-order-prompt bg-orange">Add to Cart</a></div>
                 </li>     
-                <li><a href="#" data-panel="right" class="item-link item-content inflight-order-prompt open-panel">
+                <li class="swipeout">                  
+                    <a href="krisair_generic_item_detail.html" data-panel="right" class="item-link item-content swipeout-content">
                         <div class="item-media">
                             <img src="img/krisair/f1collectibles/shirt.jpg" width="80"/></div>
                         <div class="item-inner">
@@ -80,8 +89,10 @@
                             <div class="item-text">Get set for the event in our sporty Dri-Fit 2015 F1 Polo Tee bearing the 2015 Formula 1 Singapore Airlines Singapore Grand Prix logo, complete with details such the Marina bay circuit outline, the embroidered Singapore</div>
                         </div>
                     </a>
+                    <div class="swipeout-actions-right"><a href="#" class="swipeout-content inflight-order-prompt bg-orange">Add to Cart</a></div>
                 </li> 
-                <li><a href="#" data-panel="right" class="item-link item-content inflight-order-prompt open-panel">
+                <li class="swipeout">          
+                    <a href="krisair_generic_item_detail.html" data-panel="right" class="item-link item-content swipeout-content">
                         <div class="item-media">
                             <img src="img/krisair/f1collectibles/magnet.jpg" width="80"/></div>
                         <div class="item-inner">
@@ -93,6 +104,7 @@
                             <div class="item-text">A wonderful 3-piece magnet gift set to commemorate this spectacular racing event.</div>
                         </div>
                     </a>
+                    <div class="swipeout-actions-right"><a href="#" class="swipeout-content inflight-order-prompt bg-orange">Add to Cart</a></div>
                 </li> 
             </ul>
         </div>
