--- a/www/krisair_f1collectibles_pen.html
+++ b/www/krisair_f1collectibles_pen.html
@@ -1,26 +1,33 @@
-<div data-page="krisair-item-detail" class="page">
+<div data-page="krisair-category-listing" class="page">
     <div class="navbar">
         <div class="navbar-inner">
-            <div class="left"><a href="index.html" class="back link icon-only"><i class="icon icon-back"></i></a></div>
-            <div class="center">F1 Collectibles</div>
+            <div class="left"><a href="#" class="back link icon-only"><i class="icon icon-back"></i>&nbsp;Back to KrisAir Shop</a></div>
+            <div class="center"></div>
             <div class="right"><a href="#" data-panel="right" class="link icon-only open-panel"><i class="icon fa fa-shopping-cart"></i> &nbsp; View Cart</a></div>
         </div>
     </div>
-    <div class="row no-gutter">
-        <div class="col-100 tablet-50">
-            <div class="page-content">
-                <div class="card ks-card-header-pic">
-                    <div style="background-image:url(img/krisair/f1collectibles/pen.jpg)" valign="bottom" class="card-header color-white no-border"></div>
-                    <div class="card-content"> 
-                        <div class="card-content-inner"> 
-                            <p class="color-gray">F1 Pen</p>
+    <div class="page-content">
+        <div class="row">
+            <div class="col-100 tablet-50">
+                <img src="img/krisair/f1collectibles/pen_large.jpg" width="100%"/>
+            </div>
+            <div class="col-100 tablet-50">
+                <div class="content-block bg-white">
+                    <div class="content-block-title">2015 F1 Pen Set</div>
+                    <div class="content-block-inner">
+                        <div>
+                            <span style="font-weight: bold;font-size: large;">Price:&nbsp;</span>S$20.00<br/>
+                            IS Product #: 210430<br/>
                             <p>Fitted with the Singapore Airlines aircraft-shaped clip, this gift set of five ballpoint pens provides comfortable writing with a black rubber grip.</p>
                         </div>
                     </div>
-                    <div class="card-footer"><a href="#" class="link">Add To Cart</a></div>
+                    <br/>
+                    <a href="#" class="button button-fill button-raised inflight-order-prompt">Add to Cart</a>
+                    <br/>
                 </div>
             </div>
         </div>
+        <br/>
+        <br/>
     </div>
-
 </div>
