--- a/www/krisair_generic_item_detail.html
+++ b/www/krisair_generic_item_detail.html
@@ -9,16 +9,16 @@
     <div class="page-content">
         <div class="row">
             <div class="col-100 tablet-50">
-                <img src="img/krisair/f1collectibles/earpiece_large.jpg" width="100%"/>
+                <img src="img/logo.png" width="100%"/>
             </div>
             <div class="col-100 tablet-50">
                 <div class="content-block bg-white">
-                    <div class="content-block-title">2015 F1 Racing Car Earpiece</div>
+                    <div class="content-block-title">Generic KrisAir Item</div>
                     <div class="content-block-inner">
                         <div>
-                            <span style="font-weight: bold;font-size: large;">Price:&nbsp;</span>S$32.00<br/>
-                            IS Product #: 210427<br/>
-                            <p>Packed in a handy hard-case zipper pouch, this pair of lightweight racing car earphones will make a perfect gift for racing fanatics.</p>
+                            <span style="font-weight: bold;font-size: large;">Price:&nbsp;</span>S$00.00<br/>
+                            IS Product #: 000000<br/>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                         </div>
                     </div>
                     <br/>
