--- a/www/login.html
+++ b/www/login.html
@@ -28,11 +28,11 @@
                     </li>
                 </ul>
             </div>
-            <div class="content-block"><a href="#" class="button button-big">Sign In</a></div>
+            <div class="content-block"><a href="#" class="button button-big button-raised bg-white">Sign In</a></div>
             <div class="content-block">
                 <div class="list-block-label">
-                    Some text about login information.<br>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    <p><a href="#" class="close-login-screen">Close Login Screen</a></p>
+                    Please connect to our inflight wifi before logging in.<br>Internet access is not required for using the services provided.
+                    <p><a href="#" class="link back">Close Login Screen</a></p>
                 </div>
             </div>
         </form>
