--- a/www/messaging-topics.html
+++ b/www/messaging-topics.html
@@ -2,7 +2,7 @@
     <div class="navbar">
         <div class="navbar-inner">
             <div class="left"><a href="#" class="open-panel link icon-only"><i class="icon icon-bars"></i></a></div>
-            <div class="center">Messaging</div>
+            <div class="center">Inflight Messaging</div>
         </div>
         <div class="toolbar tabbar tabbar-labels">
             <div class="toolbar-inner">
