--- a/www/index.html
+++ b/www/index.html
@@ -143,7 +143,7 @@
                                         <div class="swipeout-actions-right"><a href="#" class="swipeout-delete">Delete</a></div>
                                     </li>
                                 </ul>                                
-                                <div class="button button-big button-raised bg-white checkout-press" style="margin-top: 1vw;font-size: 2.7vw">
+                                <div class="button button-big button-raised bg-white checkout-press" style="margin-top: 10px;font-size: large">
                                     <span class="fa fa-2x fa-cc-mastercard"></span>
                                     <b> Checkout</b>
                                 </div>
