--- a/www/inflight-food-detail.html
+++ b/www/inflight-food-detail.html
@@ -53,7 +53,7 @@
                                 <div class="item-after"></div>
                             </div>
                             <div class="item-subtitle">Desserts</div>
-                            <div class="item-text">A frozen food, typically eaten as a snack or dessert, usually made from dairy products, such as milk and cream, and often combined with fruits or other ingredients and flavours.</div>
+                            <div class="item-text">A scoop of Hagen Dazs cookies & cream. Pieces of rich, chocolaty cookies are dunked in delicious, creamy vanilla ice cream to satisfy the milk-and-cookies kid in all of us.</div>
                         </div></a></li>
                 <li><a href="#" class="item-link item-content inflight-order-prompt">
                         <div class="item-media"><img src="img/inflightservice/food/angusbeef.jpg" width="80"/></div>
