updated checkout flow

--- a/www/krisair_slider_details.html
+++ b/www/krisair_slider_details.html
@@ -1,7 +1,7 @@
 <div data-page="krisair-slider-details" class="page">
     <div class="navbar">
         <div class="navbar-inner">
-            <div class="left"><a href="#" class="back link icon-only"><i class="icon icon-back"></i>&nbsp;Back to KrisAir Shop</a></div>
+            <div class="left"><a href="#" class="back link icon-only"><i class="icon icon-back"></i>&nbsp;Back</a></div>
             <div class="center"></div>
         </div>
     </div>
