--- a/www/krisair-cart-success.html
+++ b/www/krisair-cart-success.html
@@ -3,7 +3,6 @@
         <div class="navbar-inner">
             <div class="left"><a href="#" class="open-panel link icon-only"><i class="icon icon-bars"></i></a></div>
             <div class="center"></div>
-            <div class="right"><a href="#" data-panel="right" class="link icon-only open-panel"><i class="icon fa fa-shopping-cart"></i> &nbsp; View Cart</a></div>
         </div>
     </div>
     <div class="page-content">
@@ -21,7 +20,7 @@
                         </div>
                     </div>
                     <br/>
-                    <a href="#" class="button button-fill button-raised inflight-order-prompt">Back to KrisShop</a>
+                    <a href="krisair-menu.html" class="button button-fill button-raised">Back to KrisShop</a>
                     <br/>
                 </div>
             </div>
