--- a/www/krisair_f1collectibles_pen.html
+++ b/www/krisair_f1collectibles_pen.html
@@ -1,7 +1,7 @@
 <div data-page="krisair-category-listing" class="page">
     <div class="navbar">
         <div class="navbar-inner">
-            <div class="left"><a href="#" class="back link icon-only"><i class="icon icon-back"></i>&nbsp;Back to KrisAir Shop</a></div>
+            <div class="left"><a href="#" class="back link icon-only"><i class="icon icon-back"></i>&nbsp;Back</a></div>
             <div class="center"></div>
             <div class="right"><a href="#" data-panel="right" class="link icon-only open-panel"><i class="icon fa fa-shopping-cart"></i> &nbsp; View Cart</a></div>
         </div>
